# advanced-project-2

./: .gitignore  LICENSE
deep_learning/src/: bounding_box.py  dataset_test.py  gradients.py  image_datatset.py  network.py  test.py  thermal_image_dataset.py  train.py
fumarole_localization/: .gitignore  CMakeLists.txt  README.md
fumarole_localization/include/config/: ConfigParser.hpp  config.hpp
fumarole_localization/include/detection/: FumaroleDetection.hpp  FumaroleDetector.hpp  FumaroleRecognizer.hpp
fumarole_localization/include/evaluation/: AlgorithmEvaluator.h  AlgorithmEvaluator.hpp  ConfusionMatrix.hpp  Evaluation.hpp
fumarole_localization/include/io/: DatasetLoader.hpp  fumarole_data_io.hpp
fumarole_localization/include/model/: FumaroleType.hpp
fumarole_localization/include/pipeline/: FumaroleContour.hpp  FumaroleLocalizer.hpp  HeatThreshold.hpp  HistogramAnalysis.hpp  Pipeline.hpp  PipelineElement.hpp  Segmentation.hpp  Typedefs.hpp
fumarole_localization/include/recognition/: FumaroleDetectionResult.hpp  FumaroleRecognizer.hpp
fumarole_localization/include/utils/: EigenUtils.hpp
fumarole_localization/notebook/: localization.ipynb
fumarole_localization/notebook/.ipynb_checkpoints/: localization-checkpoint.ipynb
fumarole_localization/resources/: 000723914000.xml  001123914000.xml  001152514000.xml  001164614000.xml  001172314000.xml  fumarole_test_list.txt  sample_config.xml
fumarole_localization/resources/test_set_1/: 000503014000.xml  000518814000.xml  000602914000.xml  000728014000.xml  000762914000.xml  001129314000.xml  001141214000.xml  001164514000.xml  001198314000.xml
fumarole_localization/resources/test_set_2/: 001837380000.xml  001847480000.xml  001850480000.xml  001856580000.xml  001858180000.xml  001862580000.xml  001954780000.xml  001956980000.xml  001964480000.xml  001966280000.xml  002277880000.xml  002290080000.xml  002296180000.xml  002321580000.xml  002329480000.xml  002341680000.xml  002347980000.xml  002356580000.xml  002371980000.xml  002531880000.xml  fumarole_test_list copy.txt  fumarole_test_list.txt
fumarole_localization/resources/test_set_3/: 000503014000.xml  001944180000.xml  PCL_mappedImage_001837380000.xml  PCL_mappedImage_001839080000.xml  PCL_mappedImage_001862580000.xml  fumarole_test_list.txt
fumarole_localization/resources/test_set_4/: 000503014000.xml  000527514000.xml  000644514000.xml  000653214000.xml  000721514000.xml  000773214000.xml  000775914000.xml  000799614000.xml  000894514000.xml  000912114000.xml  000991314000.xml  001000214000.xml  001031014000.xml  001038514000.xml  001123914000.xml  001169114000.xml  001170814000.xml  001841480000.xml  001858180000.xml  001927280000.xml  001956980000.xml  001962480000.xml  001964480000.xml  001966280000.xml  002290080000.xml  002296180000.xml  002299380000.xml  002339880000.xml  002347980000.xml  002356580000.xml  002361280000.xml  002364480000.xml  002371980000.xml  002378480000.xml  002391780000.xml  002401480000.xml  002426180000.xml  002427880000.xml  002442380000.xml  002517680000.xml  (+11 more)
fumarole_localization/src/: main.cpp  test.cpp  train.cpp
fumarole_localization/src/config/: ConfigParser.cpp
fumarole_localization/src/detection/: FumaroleDetector.cpp  FumaroleRecognizer.cpp
fumarole_localization/src/evaluation/: AlgorithmEvaluator.cpp  ConfusionMatrix.cpp  Evaluation.cpp
fumarole_localization/src/io/: DatasetLoader.cpp  fumarole_data_io.cpp
fumarole_localization/src/model/: FumaroleType.cpp
fumarole_localization/src/pipeline/: FumaroleContour.cpp  FumaroleLocalizer.cpp  HeatThreshold.cpp  HistogramAnalysis.cpp  Pipeline.cpp  PipelineElement.cpp  Segmentation.cpp
fumarole_localization/src/recognition/: FumaroleRecognizer.cpp
fumarole_localization/src/utils/: EigenUtils.cpp
point_cloud_processing/: .gitignore  CMakeLists.txt
point_cloud_processing/src/: point_cloud_combine.cpp
tools/: copy_files_in_list.py  copy_random_sample.py  create_label_list.py  generate_plots.py  image_gradients.py  overlay_thermal.py  remove_prefixes.py  thermal_interpolate.py  threshold.py
